# cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  README_V2.md  qiproject.xml
lib/: CMakeLists.txt
lib/android-ifaddrs/: ifaddrs.c
lib/base64/: cdecode.c  cdecode.h  cencode.h  decode.h  encode.h
lib/boost_1_60_0/: CMakeLists.txt
lib/crossguid/: crossguid.cpp  crossguid.h
lib/crossguid/VisualStudio/: CrossGuid.vcxproj  CrossGuid.vcxproj.filters
lib/jo/: jo_jpeg.h
lib/jsoncpp/json/: json.h
lib/librdkafka/: config.h
lib/librdkafka/src/: win32_config.h
lib/librdkafka/win32/: librdkafka.vcxproj
lib/librdkafka/win32/librdkafkacpp/: librdkafkacpp.vcxproj
lib/minizip/: UpgradeLog.htm  ioapi.c  ioapi_buf.c  ioapi_mem.c  iowin32.c  miniunz.vcxproj  miniunz.vcxproj.filters  minizip.sln  minizip.vcxproj  minizip.vcxproj.filters
lib/openssl-1.0.1q-vs2015/: readme.precompiled.txt
lib/openssl-1.0.1q-vs2015/include/openssl/: opensslconf.h
lib/openssl-1.0.1q-vs2015/include64/openssl/: opensslconf.h
lib/openssl-1.0.1q-vs2015/lib/: libeay32MD.exp  libeay32MD.lib  libeay32MDd.exp  libeay32MDd.lib  ssleay32MD.exp  ssleay32MD.lib  ssleay32MDd.exp  ssleay32MDd.lib  ssleay32MT.lib  ssleay32MTd.lib
lib/openssl-1.0.1q-vs2015/lib64/: libeay32MD.exp  libeay32MD.lib  libeay32MDd.exp  libeay32MDd.lib  ssleay32MD.exp  ssleay32MD.lib  ssleay32MDd.exp  ssleay32MDd.lib  ssleay32MT.lib  ssleay32MTd.lib
lib/openssl-1.0.1s-nao/: package.xml
lib/openssl-1.0.1s-nao/crypto/: buildinf.h  opensslconf.h
lib/openssl-1.0.1s-nao/crypto/bn/: x86-gf2m.s  x86-mont.s
lib/openssl-1.0.1s-nao/crypto/sha/: sha1-586.s
lib/openssl-1.0.1s-nao/include/openssl/share/cmake/openssl/: openssl-config.cmake
lib/openssl-1.0.1s-nao/share/cmake/openssl/: openssl-config.cmake
lib/stb/: stb_image.h
lib/zlib-1.2.8/: gzlib.c  gzread.c  gzwrite.c
scripts/: stage_mac.sh  stage_nao.sh  stage_sota.sh
services/: IService.cpp  IService.h
src/: CMakeLists.txt  UtilsLib.h
tests/: TestAlchemy.cpp  TestConversation.cpp  TestConversationRequestIntents.cpp  TestCrypt.cpp  TestDataCache.cpp  TestDelegate.cpp  TestDialog.cpp  TestFactory.cpp  TestGetMac.cpp  TestISerializable.cpp  TestKafka.cpp  TestLanguageTranslation.cpp  TestMain.cpp  TestNaturalLanguageClassifier.cpp  TestPath.cpp  TestPersonalityInsights.cpp  TestRTTI.cpp  TestRelationshipExtraction.cpp  TestRetrieveAndRank.cpp  TestSTTResponseTime.cpp  TestSecureWebServer.cpp  TestSpeechToText.cpp  TestStringUtil.cpp  TestTextToSpeech.cpp  TestThreadPool.cpp  TestURL.cpp  (+8 more)
(+267 files in other folders)
